テーマの名前を変えました(Satoshi Takahashiさん作のテーマと名前がかぶるため)

--- a/sample/sample.tex
+++ b/sample/sample.tex
@@ -5,7 +5,7 @@
 
 \renewcommand{\kanjifamilydefault}{\gtdefault}% 既定をゴシック体に
 
-\usetheme{Tsukuba}
+\usetheme{TsukubaMin}
 
 \theoremstyle{plain}
 \newtheorem{theo}{定理}
