テーマの画像の名前が間違っていたので修正

--- a/beamerthemeTsukubaMin.sty
+++ b/beamerthemeTsukubaMin.sty
@@ -35,7 +35,7 @@
   \hbox{
   \hspace{-0.64cm}
   \begin{beamercolorbox}[wd=.4\paperwidth, ht=\paperheight]{frametitle}
-  \includegraphics[width=4cm]{imagine_white_2.png}
+  \includegraphics[width=4cm]{imagine_white.png}
   \end{beamercolorbox}
   \vbox{
     %%%logo%%%
